[package]
name = "cipher_worker"
version = "1.0.0"
authors = ["lloydmeta"]
edition = '2018'

[[bin]]
name = "cipher_worker"
test = false
doc = false

[dependencies]
url = "2.1"
serde = "^1.0"
serde_json = "^1.0"
elasticsearch = "7.5.2-alpha.1"
base64 = "0.11"
md5 = "0.7"
tokio = { version = "0.2", features = ["full"] }
hocon = { version = "0.3", features = ["serde-support"] }
structopt = "0.3"
pretty_env_logger = "0.4.0"

# Allows us to declare traits with async methods
async-trait = "0.1.24"


[dependencies.tasques_worker]
path = "worker"


[dependencies.tasques_client]
path = "client"

[workspace]
members = [
    "worker",
    "client"
]